- The app now refers to "virt" in many places instead of "xen".
  It's been coded such that files will migrate forward without
  any major issues, and the newer version of koan can still hit
  older releases (for now).  The CLI still takes the --xen options
  as well as the new --virt options, as they are aliased.  The API
  now exclusively just uses methods with "virt" in them, however.

* Tue Oct 24 2006 - 0.3.0-1
- Reload httpd during sync
- New profiles without set kickstarts default to /etc/cobbler/default.ks
  though this can be changed in /var/lib/cobbler/settings
- Better forward upgrades for /var/lib/cobbler/settings.  New entries
  get added when they are referenced.

* Tue Oct 24 2006 - 0.2.9-1
- Bug fix, enchant now detects if koan_path is not set
- import now can do ssh rsync as well as just rsyncd
- Misc bug fixes related to not choking on bad info
- Fixed bug where --pxe-address wasn't surfaced
- Sync is a little less verbose

* Wed Oct 18 2006 - 0.2.8-1
- Performance speedups to "import" command
- Bug fix, imported paths (again) convert slashes to underscores

* Tue Oct 17 2006 - 0.2.7-1
- Removed pexpect to enhance support for other distros
- enchant syntax changed (see NEWS)
- now builds on RHEL4

* Tue Oct 17 2006 - 0.2.6-1
- Removing Cheetah and replacing w/ simpler templating system
- Don't delete localmirror on sync

* Mon Oct 16 2006 - 0.2.5-1
- New "import" feature for rsync:// mirrors and filesystem directories
- Manpage clarification
- "enchant" is now a subcommand of "cobbler system" and takes less arguments.
- Several random bugfixes (mainly along error paths)

* Wed Oct 11 2006 - 0.2.4-1
- Changes to make things work with python 2.3 (RHEL4, etc)
- Updated YAML code to ensure better backward compatibility

* Mon Oct 9 2006 - 0.2.3-1
- Cobbler now creates a profile and system listing (YAML) in /var needed
  by the next version of koan (which will be 0.2.1)
- bugfix: enchant should reboot the target box